@@ -1,5 +1,6 @@
 [1.5.1-SNAPSHOT]
 - Added JRebel support to UiContainer
+- Added label + icon getters for TabButton
 
 [1.5.0]
 WARNING: This release changes the default target timestep from 100FPS to 60FPS. 
